# sbobino_tauri

./: README.md
.github/workflows/: ci.yml  promote-release.yml  release.yml
.learnings/: ERRORS.md  LEARNINGS.md
.playwright-mcp/: page-2026-05-12T10-00-21-086Z.yml
sbobino_desktop/: .gitignore  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md
sbobino_desktop/.github/workflows/: ci.yml  release.yml
sbobino_desktop/apps/desktop/: index.html  package-lock.json  package.json  remove_bg.cjs  remove_bg.mjs  remove_bg_advanced.mjs  vite.config.ts
sbobino_desktop/apps/desktop/src/: App.tsx  i18n.ts  main.tsx  styles.css  types.ts  web-haptics.d.ts
sbobino_desktop/apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
sbobino_desktop/apps/desktop/src-tauri/binaries/: ffmpeg-aarch64-apple-darwin  whisper-cli-aarch64-apple-darwin  whisper-stream-aarch64-apple-darwin  whisperkit-cli-aarch64-apple-darwin  whisperkit-cli-x86_64-apple-darwin
sbobino_desktop/apps/desktop/src-tauri/capabilities/: default.json
sbobino_desktop/apps/desktop/src-tauri/icons/: icon.icns
sbobino_desktop/apps/desktop/src-tauri/resources/pyannote/: README.md
sbobino_desktop/apps/desktop/src-tauri/resources/pyannote/model/: README.md
sbobino_desktop/apps/desktop/src-tauri/src/: ai_support.rs  error.rs  lib.rs  main.rs  realtime_audio.rs  release_assets.rs  state.rs
sbobino_desktop/apps/desktop/src-tauri/src/commands/: artifacts.rs  automatic_import.rs  backup.rs  emotion_analysis.rs  mod.rs  prepared_transcript.rs  provisioning.rs  realtime.rs  runtime.rs  settings.rs  transcription.rs  updates.rs  window.rs
sbobino_desktop/apps/desktop/src/components/: AudioPlayer.test.tsx  AudioPlayer.tsx  ConfidenceTranscript.tsx  ExportSheet.test.ts  ExportSheet.tsx  ExportSheet.ui.test.tsx  LiveMicrophoneWaveform.tsx  LoadingAnimation.tsx  ModelManagerSheet.test.tsx  ModelManagerSheet.tsx  StatusBadge.tsx
sbobino_desktop/apps/desktop/src/lib/: ansiText.test.ts  ansiText.ts  appBootstrap.test.ts  appBootstrap.ts  artifactAi.test.ts  artifactAi.ts  diarizationUi.test.ts  diarizationUi.ts  initialSetup.test.ts  initialSetup.ts  progressUi.test.ts  progressUi.ts  provisioningUi.test.ts  provisioningUi.ts  speakerColors.test.ts  speakerColors.ts  speakerTimeline.test.ts  speakerTimeline.ts  tauri.ts  transcriptionQueue.test.ts  transcriptionQueue.ts  updateState.test.ts  updateState.ts  whisperConfidence.test.ts  whisperConfidence.ts
sbobino_desktop/apps/desktop/src/state/: useAppStore.test.ts  useAppStore.ts
sbobino_desktop/apps/desktop/src/test/: automaticImportSettings.test.ts  closeConfirmation.test.ts  queueUi.test.ts  setup.ts  theme-consistency.test.ts  updateUi.test.ts
sbobino_desktop/crates/application/: Cargo.toml
sbobino_desktop/crates/application/src/: dto.rs  error.rs  lib.rs  ports.rs  summary_pipeline.rs
sbobino_desktop/crates/application/src/services/: artifact_service.rs  mod.rs  settings_service.rs  transcription_service.rs
sbobino_desktop/crates/application/tests/: settings_service_tests.rs  transcription_service_tests.rs
sbobino_desktop/crates/domain/: Cargo.toml
sbobino_desktop/crates/domain/src/: artifact.rs  emotion_analysis.rs  error.rs  job.rs  lib.rs  settings.rs  transcript_cleanup.rs
sbobino_desktop/crates/infrastructure/: Cargo.toml
sbobino_desktop/crates/infrastructure/src/: lib.rs  secure_storage.rs
sbobino_desktop/crates/infrastructure/src/adapters/: ffmpeg.rs  foundation_apple.rs  gemini.rs  mod.rs  noop_enhancer.rs  openai_compatible.rs  pyannote.rs  transcript_segmentation.rs  whisper_cpp.rs  whisper_kit.rs  whisper_stream.rs
sbobino_desktop/crates/infrastructure/src/repositories/: fs_settings_repository.rs  mod.rs  sqlite_artifact_repository.rs
sbobino_desktop/crates/infrastructure/tests/: fs_settings_repository_tests.rs  pyannote_engine_tests.rs  sqlite_artifact_repository_tests.rs  whisper_cpp_engine_tests.rs  whisper_stream_engine_tests.rs
sbobino_desktop/docs/: architecture.md  distribution-validation-plan.md  feature-migration-matrix.md  first-real-candidate-runbook.md  github-release-template.md  release-and-migration.md  self-hosted-release-runners.md
sbobino_desktop/docs/github-backlog/: README.md
sbobino_desktop/docs/github-backlog/issues/: 09-device-aware-whisper-optimization.md  10-adaptive-model-routing-for-transcription.md  11-personal-vocabulary-and-correction-memory.md  12-hard-audio-recovery-mode.md  13-confidence-uncertainty-and-review-aware-transcript-ui.md  14-segment-repair-and-speaker-quality-pass.md  15-personalized-acoustic-adaptation-research-track.md
sbobino_desktop/scripts/: check_no_skipped_tests.sh  check_release_runner_matrix.sh  dispatch_release_candidate.sh  distribution_readiness.sh  generate_pyannote_manifest.sh  generate_release_candidate_metadata.py  generate_release_manifests.sh  install_self_hosted_runner_macos.sh  package_macos_runtime_asset.sh  preflight_self_hosted_runner.sh  prepare_local_release.sh  promote_candidate_release.sh  prune_local_releases.sh  publish_candidate_release.sh  pyannote_diarize.py  release_readiness.sh  retire_failed_candidate.sh  run_real_pyannote_smoke.sh  run_release_machine_validation.sh  setup_bundled_pyannote.sh  setup_runtime.sh  verify_local_apple_silicon_release.sh  watch_release_candidate.sh  write_distribution_readiness_proof.py
