[workspace]
resolver = "2"
members = [
  "crates/domain",
  "crates/application",
  "crates/infrastructure",
  "apps/desktop/src-tauri",
]

[workspace.package]
edition = "2021"
authors = ["Sbobino Team"]
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "process", "fs", "sync", "io-util"] }
tokio-util = { version = "0.7", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1.15", features = ["serde", "v4"] }
futures-util = "0.3"
hound = "3.5"
sha2 = "0.10"
ring = "0.17"
