[package]
name = "sbobino-application"
version = "0.1.38"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true
hound.workspace = true
sbobino-domain = { path = "../domain" }

[dev-dependencies]
tempfile = "3.13"
