[package]
name = "sbobino-infrastructure"
version = "0.1.17"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
futures-util.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
hound.workspace = true
ring.workspace = true
sbobino-domain = { path = "../domain" }
sbobino-application = { path = "../application" }

[dev-dependencies]
tempfile = "3.13"
