[package]
name = "sbobino-desktop"
version = "0.1.17"
description = "Sbobino Desktop Rewrite"
authors.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "sbobino_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
futures-util.workspace = true
reqwest.workspace = true
chrono.workspace = true
sha2.workspace = true
cpal.workspace = true
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
docx-rs = "0.4"
printpdf = "0.8"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
sbobino-domain = { path = "../../../crates/domain" }
sbobino-application = { path = "../../../crates/application" }
sbobino-infrastructure = { path = "../../../crates/infrastructure" }
window-vibrancy = "0.7.1"
base64 = "0.22"
hound.workspace = true
libc = "0.2"

[dev-dependencies]
tempfile = "3.13"
